--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="statics/css/home/home.css">
+    <link rel="stylesheet" type="text/css" href="static/css/home/home.css">
 </head>
 
 <body>
