--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             technical skill and attention to user experience, with a focus on elegance and performance.
                         </p>
                         <div class="images">
-                            <a href="http://127.0.0.1:5500/templates/project1/quick_overview.html"><img src="static/images/project1/Untitled.png" alt="project image"></a>
+                            <a href="templates/project1/quick_overview.html"><img src="static/images/project1/Untitled.png" alt="project image"></a>
                         </div>
                     </div>
                     <div class="project">
@@ -82,7 +82,7 @@
                             core web technologies.
                         </p>
                         <div class="images">
-                            <a href="http://127.0.0.1:5500/templates/project2/quick_overview.html"><img src="static/images/project2/Untitled11.png" alt="project image"></a>
+                            <a href="templates/project2/quick_overview.html"><img src="static/images/project2/Untitled11.png" alt="project image"></a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <button type="submit" class="btn secondary">Send</button>
                     <p id="form-msg" class="form-msg"></p>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/templates/thank_you.html">
+                    <input type="hidden" name="_next" value="templates/thank_you.html">
                 </form>
             </div>
         </section>
