Fix input next value

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <button type="submit" class="btn secondary">Send</button>
                     <p id="form-msg" class="form-msg"></p>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="templates/thank_you.html">
+                    <input type="hidden" name="_next" value="https://chesterlen.github.io/templates/thank_you.html">
                 </form>
             </div>
         </section>
