--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="static/images/portfolio_favicon.png">
     <link rel="stylesheet" type="text/css" href="static/css/home/home.css">
 </head>
 
